--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
     "microcms-js-sdk": "^3.2.0",
-    "next": "^15.4.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "next": "^16.1.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "recharts": "^3.6.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.16",
+    "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
