feat: implement patient Gemini retry strategy and fix multi-site branding builds

--- a/src/dna.config.flip.json
+++ b/src/dna.config.flip.json
@@ -1,7 +1,7 @@
 {
     "identity": {
         "name": "Flip Logic",
-        "site_id": "flip_logic"
+        "site_id": "flip"
     },
     "persona": {
         "tone": "Cold, Logical, Professional Trader",
