--- a/src/dna.config.legacy.json
+++ b/src/dna.config.legacy.json
@@ -1,7 +1,7 @@
 {
     "identity": {
         "name": "親の家、どうする？",
-        "site_id": "legacy_guard",
+        "site_id": "legacy",
         "description": "実家を'負担'から'資産'に変える、たったひとつの選択。"
     },
     "persona": {
