--- a/src/dna.config.subsidy.json
+++ b/src/dna.config.subsidy.json
@@ -1,7 +1,7 @@
 {
     "identity": {
         "name": "おうちの補助金相談室",
-        "site_id": "subsidy_nav",
+        "site_id": "subsidy",
         "description": "おばあちゃんでもわかる、補助金でお得にリフォーム。"
     },
     "persona": {
