--- a/src/dna.config.wealth.json
+++ b/src/dna.config.wealth.json
@@ -1,7 +1,7 @@
 {
     "identity": {
         "name": "Wealth Navigator",
-        "site_id": "wealth_navigator",
+        "site_id": "wealth",
         "description": "Global Investment Strategies for High Net Worth Individuals."
     },
     "persona": {
