--- a/src/dna.config.json
+++ b/src/dna.config.json
@@ -1,53 +1,71 @@
 {
     "identity": {
-        "name": "Wealth Navigator",
-        "site_id": "wealth",
-        "description": "Global Investment Strategies for High Net Worth Individuals."
+        "name": "空き家錬金術",
+        "description": "放置された空き家を、年間利回り15%の資産に変える。",
+        "domain": "kominka-frontier.vercel.app",
+        "email": "info@kominka-frontier.com",
+        "site_id": "kominka",
+        "author": "Kominka Frontier Team",
+        "social": {
+            "line": "https://lin.ee/xxxxxx"
+        }
     },
     "persona": {
-        "tone": "Authoritative, Strategic, Premium",
-        "first_person": "私 (チーフストラテジスト)",
-        "audience_level": "High/Expert",
-        "keywords": [
-            "Opportunity Loss",
-            "Arbitrage",
-            "Global Macro",
-            "Tax Optimization"
-        ]
+        "role": "夢を語れる建築家 × 数字に厳しい投資家",
+        "tone": "熱量高めだが、数字の話などの重要な判断においては冷静でシャープ。「〜だ・である」調を交えつつ、夢と実利の両方を語る。",
+        "mission": "読者に古民家投資のロマンと経済的メリットを伝え、実際に行動（物件探し・購入）へ移させること。"
     },
     "target": {
-        "audience": "High Net Worth Individuals (HNWI), Business Owners",
+        "audience": "35〜55歳のサラリーマン投資家、中小企業経営者、医師・士業",
         "pain_points": [
-            "Taxation",
-            "Inflation",
-            "Legacy Preservation"
+            "次の投資先がない（都心・RCの利回り低下）",
+            "キャッシュフローが出ない",
+            "差別化できない",
+            "相続した実家の処分",
+            "リフォーム費用の不透明さ"
         ]
     },
     "categories": {
-        "domestic": {
-            "id": "domestic",
-            "name": "国内不動産",
-            "description": "都心中古マンション、J-REIT、金利戦略。",
-            "context": "Focus on 'Deny New Build Premium', 'Vintage Superiority', and 'Selection/Replacement Period'."
+        "find": {
+            "id": "find",
+            "name": "物件を探す",
+            "description": "投資対象の物件を見つけたい。",
+            "context": "Focus on 'Finding Properties', 'Empty House Bank', 'Under 1 Million Yen' deals."
         },
-        "overseas": {
-            "id": "overseas",
-            "name": "海外不動産",
-            "description": "成長国投資、通貨分散、タックスメリット。",
-            "context": "Focus on 'Yen Depreciation Risk', 'Ray Dalio Diversification', and 'Shelter for Assets'."
+        "renovate": {
+            "id": "renovate",
+            "name": "再生する",
+            "description": "リノベーションの方法・費用を知りたい。",
+            "context": "Focus on 'Renovation Costs', 'Subsidies', 'DIY vs Pro', 'Architectural Value'."
         },
-        "column": {
-            "id": "column",
-            "name": "ストラテジー",
-            "description": "投資家心理、市場サイクル、マクロ経済。",
-            "context": "Focus on 'Howard Marks Market Cycle', 'Contrarian Courage', and 'Investor Psychology'."
+        "operate": {
+            "id": "operate",
+            "name": "民泊で稼ぐ",
+            "description": "民泊運営のノウハウを知りたい。",
+            "context": "Focus on 'Airbnb Operation', 'Occupancy Rate', 'Pricing Strategy', 'Guest Experience'."
+        },
+        "exit": {
+            "id": "exit",
+            "name": "出口戦略",
+            "description": "売却・事業承継を考えたい。",
+            "context": "Focus on 'Selling Higher', 'Exit Timing', 'Business Succession', 'Real Estate Capital Gains'."
         }
     },
+    "bible_path": "libs/brain/bibles/kominka_bible.md",
+    "strategy_path": "libs/brain/strategies/kominka_strategy.md",
+    "cta": {
+        "label": "Kominka Investor Community",
+        "title": "利回り15%物件は<br />市場には出ない。",
+        "description": "本当に儲かる古民家情報は、水面下で取引されます。<br class=\"hidden md:block\" />空き家バンクに出る前の「川上情報」、<br />リフォーム費を半額にする職人リストを、<br class=\"hidden md:block\" />LINEメンバー限定で公開します。",
+        "buttonText": "非公開物件リストを受け取る",
+        "url": "https://line.me/R/ti/p/@kominka",
+        "image": "/images/kominka_lounge.jpg"
+    },
     "hero": {
-        "title": "一流を、<br />再定義する。",
-        "subTitle": "現代のビジョナリーへ贈る、<br />至高のインサイト。",
+        "title": "放置された資産を、<br />蘇らせる。",
+        "subTitle": "眠れる古民家に、<br />新たな命と価値を。",
         "primaryButton": {
-            "text": "「信用力」と「最適戦略」を診断する (無料)",
+            "text": "古民家投資診断を始める (無料)",
             "url": "/simulation"
         },
         "secondaryButton": {
@@ -56,31 +74,21 @@
         }
     },
     "premium": {
-        "title": "厳選された物件",
+        "title": "厳選された古民家",
         "btnText": "すべての物件を見る"
     },
     "philosophy": {
-        "title": "真の豊かさとは、<br />選択肢を持つこと。",
-        "description": "資産とは、数字の羅列ではない。それは、選択肢である。<br />望む場所に住み、望む時間を生き、望む人々と過ごす。<br />その自由を手にするための、静かなる力である。<br /><br />知識こそが、最強の防衛策。<br />そして、真の自由への最短距離である。"
+        "title": "古き良きものに、<br />新しい価値を。",
+        "description": "ただの古い家ではない。それは、地域の歴史であり、文化である。<br />適切なリノベーションと戦略があれば、<br />それは高い利回りを生む最強の資産に変わる。<br /><br />空き家問題の解決と、投資家の利益。<br />その両立こそが、私たちの使命である。"
     },
     "bridge": {
-        "title": "「孤独な決断」から、<br />「確信ある選択」へ",
-        "description": "資産運用は情報戦です。30年の実績を持つプロフェッショナルを、<br class=\"hidden md:block\" />あなた専属の<span class=\"text-[#c59f59] font-bold\">「プライベート・顧問」</span>に迎え入れる。<br />それが、資産を守る最強の防衛策です。",
-        "buttonText": "資産防衛・個別相談を予約する",
+        "title": "「不安な投資」から、<br />「堅実な再生」へ",
+        "description": "古民家投資は知識と経験が全てです。<br class=\"hidden md:block\" />リノベーションのプロと、<br class=\"text-[#c59f59] font-bold\">「再生のパートナー」</span>として手を組む。<br />それが、失敗しない古民家投資の条件です。",
+        "buttonText": "古民家再生・個別相談を予約する",
         "url": "/inquiry"
     },
-    "bible_path": "libs/brain/titans_knowledge.md",
-    "strategy_path": "libs/brain/strategies/wealth_strategy.md",
-    "cta": {
-        "label": "Members Only Intelligence",
-        "title": "Webでは書けない<br />「裏情報」がある。",
-        "description": "この記事で公開したのは、氷山の一角です。<br class=\"hidden md:block\" />具体的な金融機関名、市場に出ない非公開物件、税務の核心...<br />不特定多数には公開できない「資産防衛の真実」を、<br class=\"hidden md:block\" />LINEメンバー限定で配信します。",
-        "buttonText": "LINEで「極秘情報」を受け取る",
-        "url": "https://line.me/R/ti/p/@wealth-navigator",
-        "image": "/images/wealth_lounge.jpg"
-    },
     "theme": {
-        "primaryColor": "#1A1A1A",
-        "accentColor": "#C9A962"
+        "primaryColor": "#1a1a1a",
+        "accentColor": "#A68A56"
     }
 }
